--- a/index.html
+++ b/index.html
@@ -1,23 +1,52 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF--8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PDF Image Merger</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      :root { /* Light Theme */
+        --color-brand-bg: 242 242 247;
+        --color-brand-surface: 255 255 255;
+        --color-brand-text: 28 28 30;
+        --color-brand-text-secondary: 142 142 147;
+        --color-border: 229 229 234;
+        --color-overlay-bg: 0 0 0;
+        --shadow-color: 99 99 99;
+      }
+      html[data-theme='dark'] {
+        --color-brand-bg: 26 26 26;
+        --color-brand-surface: 42 42 42;
+        --color-brand-text: 240 240 240;
+        --color-brand-text-secondary: 160 160 160;
+        --color-border: 70 70 70;
+        --color-overlay-bg: 0 0 0;
+        --shadow-color: 0 0 0;
+      }
+      body {
+        background-color: rgb(var(--color-brand-bg));
+        color: rgb(var(--color-brand-text));
+      }
+    </style>
     <script>
       tailwind.config = {
         theme: {
           extend: {
             colors: {
-              'brand-bg': '#1a1a1a',
-              'brand-surface': '#2a2a2a',
+              'brand-bg': 'rgb(var(--color-brand-bg))',
+              'brand-surface': 'rgb(var(--color-brand-surface))',
               'brand-primary': '#6a45ff',
               'brand-secondary': '#ff6b6b',
-              'brand-text': '#f0f0f0',
-              'brand-text-secondary': '#a0a0a0',
+              'brand-text': 'rgb(var(--color-brand-text))',
+              'brand-text-secondary': 'rgb(var(--color-brand-text-secondary))',
+              'border-color': 'rgb(var(--color-border))',
+              'overlay-bg': 'rgb(var(--color-overlay-bg))',
+            },
+            boxShadow: {
+              'lg': '0 10px 15px -3px rgb(var(--shadow-color) / 0.1), 0 4px 6px -4px rgb(var(--shadow-color) / 0.1)',
+              '2xl': '0 25px 50px -12px rgb(var(--shadow-color) / 0.25)',
             },
           },
         },
@@ -33,8 +62,19 @@
   }
 }
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-0274741291001288"
+     crossorigin="anonymous"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7YET35VCNR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7YET35VCNR');
+</script>
 </head>
-  <body class="bg-brand-bg text-brand-text">
+  <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
